--- a/낙서장8.html
+++ b/낙서장8.html
@@ -6,28 +6,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <style>
-      input{
+      input {
         position: fixed;
         left: -1100px;
       }
-     input:checked ~ ul{
-      
-      display: block;
-     }
-     ul{
-      display: none;
-     }
+      input:checked ~ ul {
+        display: block;
+      }
+      ul {
+        display: none;
+      }
     </style>
   </head>
   <body>
-    <input type="checkbox" id="btn">
-    <label for="btn"><img src="./img/moreinfo.png"></label>
-    
-  <ul>
-    <li>1</li>
-    <li>2</li>
-    <li>3</li>
-    <li>4</li>
-  </ul>
+    <input type="checkbox" id="btn" />
+    <label for="btn"><img src="./img/moreinfo.png" /></label>
+
+    <ul>
+      <li>1123213133</li>
+      <li>2</li>
+      <li>3</li>
+      <li>4</li>
+    </ul>
   </body>
 </html>
